; ModuleID = '/home/carl/AnghaBench/rofi/source/widgets/extr_textbox.c_textbox_cleanup.c'
source_filename = "/home/carl/AnghaBench/rofi/source/widgets/extr_textbox.c_textbox_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tbfc_cache = common dso_local global i32 0, align 4
@p_context = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @textbox_cleanup() #0 {
  %1 = load i32, i32* @tbfc_cache, align 4
  %2 = call i32 @g_hash_table_destroy(i32 %1)
  %3 = load i32*, i32** @p_context, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i32*, i32** @p_context, align 8
  %7 = call i32 @g_object_unref(i32* %6)
  store i32* null, i32** @p_context, align 8
  br label %8

8:                                                ; preds = %5, %0
  ret void
}

declare dso_local i32 @g_hash_table_destroy(i32) #1

declare dso_local i32 @g_object_unref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
